dev stage 10